--- a/cartuning/angular.json
+++ b/cartuning/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "cartuning:build"
+            "browserTarget": "cartuning:build",
+			"port" : 1337
           },
           "configurations": {
             "production": {
