--- a/cartuning/package.json
+++ b/cartuning/package.json
@@ -12,11 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.5",
-    "@angular/cdk": "^9.2.3",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
-    "@angular/forms": "~9.0.5",
+    "@angular/forms": "^9.1.9",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
@@ -28,6 +28,8 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "ngx-owl-carousel-o": "^3.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
