--- a/cartuning/package.json
+++ b/cartuning/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
+    "jwt-decode": "^3.1.2",
     "ngx-owl-carousel-o": "^6.0.0",
     "ngx-socket-io": "^3.2.0",
     "ngx-timeago": "^2.0.0",
